--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -1,4 +1,4 @@
-* {
+*  {
   padding: 0;
   margin: 0;
 }
@@ -6,15 +6,11 @@ img  {
   max-width: 100%;
 }
 header  {
-  display: flex;
-  justify-content: center;
-  align-content: center;
-  background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSJpvGI3s0do_hR-FO5Z3rG1KkWum1cHaijY_CXbxY5MWHroCGRlg");
+  background-image: url("https://upload.wikimedia.org/wikipedia/commons/thumb/7/77/Pebbleswithquarzite.jpg/1200px-Pebbleswithquarzite.jpg");
   background-repeat: no-repeat;
   background-size: 100%; 
-  width: 100%;
   padding-top: .8em;
-  margin: .5em 0 1em 0;
+  margin: .5em .5em 1em .5em;
   border: 4px solid black; 
 }
 
@@ -29,7 +25,7 @@ h1  {
 }
 
 body  {
-  background-color: #66B6BF;
+  background-color: #7F7744;
 }
 .rainier  {
   display: flex;
@@ -41,9 +37,28 @@ body  {
   height: 15em;
   
 }
+h3  {
+  margin-left: 650px;
+}
 label  {
   font-family: 'Ultra', serif;
 }
+form  {
+  margin-left: 2em;
+  text-align: center;
+  
+}
+.button {
+  background-color: #BF2E19;
+  font-family: 'Ultra', serif;
+  padding: .5em;
+  margin: .5rem 0 0 0;
+}
+input  {
+  background-color: #E5D4B3;
+  box-shadow: 2px 2px 2px black;
+}
+
 /*  SECTIONS  */
 .section {
 	clear: both;
@@ -73,4 +88,19 @@ label  {
 @media only screen and (max-width: 480px) {
 	.col {  margin: 1% 0 1% 0%; }
 	.span_3_of_3, .span_2_of_3, .span_1_of_3 { width: 100%; }
+}
+footer  {
+  background-image: url("http://www.gonorthwest.com/Washington/cascades/mt_rainier/images/rainier_McAnulty.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 20em;
+  border: 4px solid black;
+  margin: .8em 1em .8em 1em;
+  
+}
+h4  {
+  font-family: 'Ultra', serif;
+  text-align: center;
+  font-size: 3em;
+  
 }
